--- a/github-tree-push-module/package.json
+++ b/github-tree-push-module/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "fetch-retry": "^4.1.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "sha1": "^1.1.1"
   }
 }
