--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,12 +2,9 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2020",
-    "strict": false,
+    "strict": true,
     "moduleResolution": "node",
     "resolveJsonModule": true
   },
-  "exclude": [
-    "node_modules",
-    "**/node_modules/*"
-  ]
+  "exclude": ["node_modules", "**/node_modules/*"]
 }
