--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsdoc": "^36.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1"
   },
   "dependencies": {
